<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/bottom_challenge"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/challenge"/>
    <item
        android:id="@+id/bottom_community"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/community"/>
    <item
        android:id="@+id/bottom_statistics"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/statistics"/>
    <item
        android:id="@+id/bottom_journal"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/journal"/>

</menu>